--- a/ios-developer.html
+++ b/ios-developer.html
@@ -92,7 +92,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://endios.join.com/jobs/255141-android-lead-developer-m-f-d-immediately-open-ended-full-time-contract'>Job @ endios (Hamburg): Android Lead Developer (m/... | JOIN</a></h5> 
+<h5><a href='https://endios.join.com/jobs/255141-android-lead-developer-m-f-d-immediately-open-ended-full-time-contract'>Job @ endios (Hamburg): Android Lead Developer (m/... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -166,7 +166,7 @@ Boston, Massachusetts. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light">Cincinnati, OH</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cobibike.recruitee.com/o/ios-developer-fmx-reutlingen'>
+<h5><a href='https://cobibike.recruitee.com/o/ios-developer-fmx-reutlingen'>
       iOS Developer (f/m/x) - COBI.Bike GmbH
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -212,7 +212,7 @@ label.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/sequoia/9d2675c0-742f-4016-ae9e-166cbc59eedd'>Sequoia Consulting Group - Software Development Engineer - iOS Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/sequoia/9d2675c0-742f-4016-ae9e-166cbc59eedd'>Sequoia Consulting Group - Software Development Engineer - iOS Developer</a></h5> 
 <p><span class="badge badge-light">Bangalore</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -244,7 +244,7 @@ label.</p>
 <p><span class="badge badge-light">Warsaw</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/freenow/jobs/1721630'>Job Application for iOS Developer Barcelona at FREE NOW</a></h5> 
+<h5><a href='https://boards.greenhouse.io/freenow/jobs/1721630'>Job Application for iOS Developer Barcelona at FREE NOW</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -252,7 +252,7 @@ label.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/freenow/jobs/1748893'>Job Application for iOS Developer - Autonomous Driving (m/f/d) at FREE NOW</a></h5> 
+<h5><a href='https://boards.greenhouse.io/freenow/jobs/1748893'>Job Application for iOS Developer - Autonomous Driving (m/f/d) at FREE NOW</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -336,15 +336,15 @@ Things?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/coinsquare/8ad5dc6c-af82-4ec6-a0d0-359964e36dc1'>Coinsquare - iOS Developer - Swift</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/coinsquare/8ad5dc6c-af82-4ec6-a0d0-359964e36dc1'>Coinsquare - iOS Developer - Swift</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/adyen/jobs/538283'>Job Application for iOS Developer  at Adyen</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/adyen/jobs/538283'>Job Application for iOS Developer  at Adyen</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
-<h5><a href='https://nodes.recruitee.com/o/senior-ios-developer'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nodes.recruitee.com/o/senior-ios-developer'>
       Senior iOS Developer - Nodes
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -366,7 +366,7 @@ Things?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Playtech/743999691320508-ios-developer'>Playtech iOS Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Playtech/743999691320508-ios-developer'>Playtech iOS Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-07-09</p>
 <hr/>
@@ -392,7 +392,7 @@ Things?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
-<h5><a href='https://mastercard.wd1.myworkdayjobs.com/en-US/CorporateCareers/job/Dublin-Ireland/IOS-Developer--Software-Engineering_R-86314'>IOS Developer, Software Engineering</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mastercard.wd1.myworkdayjobs.com/en-US/CorporateCareers/job/Dublin-Ireland/IOS-Developer--Software-Engineering_R-86314'>IOS Developer, Software Engineering</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... we provide the tools. Senior Software Engineer - Open Banking | Dublin, Ireland 
 ... Senior Engineer, Software Engineering | Dublin, Ireland ? Senior Engineer?...</p>
@@ -413,7 +413,7 @@ Things?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/gunio/e72d54ce-b141-495b-bf29-74be0251238c'>Gun.io - iOS Developer RxSwift/RxCocoa</a></h5> 
+<h5><a href='https://jobs.lever.co/gunio/e72d54ce-b141-495b-bf29-74be0251238c'>Gun.io - iOS Developer RxSwift/RxCocoa</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
@@ -450,7 +450,7 @@ Canada.</p>
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://and-digital.workable.com/j/4DFB8EA379'>AND Digital - Jobs: Senior iOS Developer (Leeds) - Apply online</a></h5> 
+<h5><a href='https://and-digital.workable.com/j/4DFB8EA379'>AND Digital - Jobs: Senior iOS Developer (Leeds) - Apply online</a></h5> 
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
